<resources>
    <string name="app_name">LUCY</string>

    <string name="next">다음</string>

    <!-- first survey -->
    <string name="enter_name">이름을 입력해주세요</string>
    <string name="name">이름</string>
    <string name="first_order">1/3</string>


    <!-- second survey -->
    <string name="second_order">2/3</string>
    <string name="pick_strong_point">자신있는 강점을 골라주세요.</string>
    <string name="can_four_selection">4개까지 복수 선택이 가능해요</string>


    <!-- third survey -->
    <string name="can_multiple_selection">복수 선택이 가능해요</string>
    <string name="select_favor_category">관심있는 분야를 골라주세요</string>
    <string name="third_order">3/3</string>

    <!-- survey result -->
    <string name="survey_result">설문 결과</string>
    <string name="nice_fit_job">적성에 잘 맞는 직업들이에요!</string>
    <string name="i_dont_want_any_job">하고싶은 일이 없다면?</string>
    <string name="interesting_job">세상에는 이런 직업도 있어요!</string>
    <string name="find_one_job">구체적으로 어떤걸 하면 좋을까?</string>
    <string name="the_easiest_way_to_find_want_thing">세상에서 가장 쉬운 하고싶은 일 찾는법</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content">내용</string>
    <string name="writer">저자(닉네임)</string>
    <string name="title">세상에서 가장 쉬운 하고 싶은 일 찾는 법</string>
    <string name="date">2023년1월1일</string>
</resources>