<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />


        <TextView
            android:id="@+id/tv_question_order"
            style="@style/medium_14"
            android:layout_marginTop="64dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_order"
            android:textColor="@color/primary"
            app:layout_constraintStart_toStartOf="@+id/guideline_start"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_question"
            style="@style/medium_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_name"
            app:layout_constraintStart_toStartOf="@+id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/tv_question_order" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_name"
            style="@style/medium_16"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="4dp"
            android:layout_marginTop="60dp"
            android:backgroundTint="@color/gray50"
            android:hint="@string/name"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end"
            app:layout_constraintStart_toStartOf="@+id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/tv_question" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/lucy_btn"
            android:id="@+id/btn_next"
            android:layout_width="0dp"
            android:layout_marginBottom="16dp"
            android:text="@string/next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end"
            app:layout_constraintStart_toStartOf="@+id/guideline_start" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>